envoy_monitoring/service_c/envoy-config.yaml
stats_sinks:
  - name: "envoy.statsd"
    config:
      tcp_cluster_name: "statsd-exporter"
      prefix: service-c
tracing:
  http:
    name: "envoy.zipkin"
    config:
      collector_cluster: zipkin
      collector_endpoint: "/api/v1/spans"

admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: "127.0.0.1"
      port_value: 9901

static_resources:
  listeners:
    - name: "service-c-svc-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8790
      filter_chains:
        - filters:
            - name: "envoy.http_connection_manager"
              config:
                tracing:
                  operation_name: ingress
                # access_log:
                # - name: envoy.file_access_log
                #   config:
                #     path: /dev/stdout
                #     format: "[ACCESS_LOG][%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" \"%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\"\n"
                stat_prefix: "ingress_8786"
                codec_type: "AUTO"
                route_config:
                  name: "service-c-svc-http-route"
                  virtual_hosts:
                    - name: "service-c-svc-http-route"
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/request1"
                          route:
                            cluster: "service_c"
                            include_vh_rate_limits: true
                            rate_limits:
                              - actions:
                                  - generic_key:
                                      descriptor_value: "r1_service_c"
                http_filters:
                  # - name: "envoy.router"
                  - name: envoy.rate_limit
                    config:
                      domain: apis
                      failure_mode_deny: false
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc:
                            cluster_name: rate_limit_cluster
                          timeout: 0.25s
                  - name: envoy.router
                    config: {}
    
  clusters:
      - name: "statsd-exporter"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        hosts:
          - socket_address:
              address: "statsd_exporter"
              port_value: 9125
      - name: "service_c"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        hosts:
          - socket_address:
              address: "service_c"
              port_value: 8083
      
      - name: "zipkin"
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: zipkin
            port_value: 9411

      - name: "rate_limit_cluster"
        type: "strict_dns"
        connect_timeout: 0.25s
        lb_policy: "ROUND_ROBIN"
        http2_protocol_options: {}
        hosts:
        - socket_address:
            address: "ratelimit"
            port_value: 8081
